<resources>
    <string name="app_name">GameAppV2</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Character</string>
    <string name="tab_text_2">Lobby</string>
    <string name="tab_text_3">Adventures</string>
    <string name="tab_text_4">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="contact_header">Contact data</string>
    <string name="sync_header">Sync</string>

    <!-- User Data Preferences -->
    <string name="full_name_title">Full name</string>
    <string name="email_title">Your contact email</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>